--- a/styles.css
+++ b/styles.css
@@ -217,11 +217,11 @@ body {
 /* Your existing styles above */
 
 .juice-portrait {
-  width: 20rem;
-  height: 20rem;
+  width: 15rem;
+  height: 15rem;
   border-radius: 50%;
   overflow: hidden;
-  margin-top: 7rem;
+  top: 50px;
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -248,6 +248,7 @@ body {
   height: 100%;
   object-fit: cover;
   display: block;
+
 }
 
 .juice-portrait:hover::before {
@@ -263,6 +264,17 @@ body {
   margin-right: auto;
   text-align: center;
   margin-top: 5rem;
+}
+
+.artist-name p {
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 5rem;
+  font-weight: bold;
+
 }
 
 
